<resources>
    <string name="app_name">Registeration</string>
    <string name="successfulConfirm">Your information has been successfully registered</string>
    <string name="username">UserName :</string>
    <string name="fname">Name :</string>
    <string name="famliy">Famliy :</string>
    <string name="age">Age :</string>
    <string name="email">Email :</string>
    <string name="mobile">Mobile :</string>
    <string name="city">City :</string>
    <string name="confirm">Back</string>
    <string name="enter_your_fisrt_name">enter your fisrt name</string>
    <string name="enter_your_last_name">enter your last name</string>
    <string name="enter_your_age">enter your age</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="enter_your_mobile_number">enter your mobile number</string>
    <string name="register_me">Register me</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register">Register</string>
    <string name="wellcome">Wellcome to my app... 🙋‍</string>
    <string name="show_my_profile">Show My Profile</string>
    <string name="wellcome_dear">Wellcome Dear</string>
    <string name="clear_form">Clear form</string>
    <string name="show_list">Show Users</string>
    <string name="sign_in">Sign In</string>
    <string name="no_any_user">No Any User Defined</string>
    <string name="login_welcome_msg">WellCome To Application</string>
    <string name="login_wrong_mobile">Please Enter Correct Mobile Number</string>
    <string name="login_empty_mobile">Enter Mobile Number to Sigin</string>

    <string name="enter_your_city">Enter Your City</string>
    <string name="grantCamera">Approve permissions to open ImagePicker</string>

    <string-array name="cities_array">
        <item>Tehran</item>
        <item>Ahvaz</item>
        <item>Arak</item>
        <item>Ardabil</item>
        <item>Bandar Abbas</item>
        <item>Birjand</item>
        <item>Bojnourd</item>
        <item>Bushehr</item>
        <item>Gorgan</item>
        <item>Hamadan</item>
        <item>Ilam</item>
        <item>Isfahan</item>
        <item>Karaj</item>
        <item>Kerman</item>
        <item>Kermanshah</item>
        <item>Khorramabad</item>
        <item>Mashhad</item>
        <item>Qazvin</item>
        <item>Qom</item>
        <item>Rasht</item>
        <item>Sanandaj</item>
        <item>Sari</item>
        <item>Semnan</item>
        <item>Shahrekord</item>
        <item>Shiraz</item>
        <item>Tabriz</item>
        <item>Urmia</item>
        <item>Yasuj</item>
        <item>Yazd</item>
        <item>Zahedan</item>
        <item>Zanjan</item>
    </string-array>

</resources>
