<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backwithborder4reg"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/fname"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backwithborder4edt"
                android:hint="@string/enter_your_fisrt_name"
                android:inputType="text"
                android:padding="2dp"
                android:textSize="20sp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/famliy"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtFamliy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backwithborder4edt"
                android:hint="@string/enter_your_last_name"
                android:inputType="text"
                android:padding="2dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/age"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/backwithborder4edt"
                android:hint="@string/enter_your_age"
                android:inputType="number"
                android:padding="2dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/backwithborder4edt"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:padding="2dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:text="@string/mobile"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backwithborder4edt"

            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            android:padding="2dp"
            android:textSize="20sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:text="@string/city"
                android:textSize="20sp" />
            <Spinner
                android:id="@+id/sprCity"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:background="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            app:riv_corner_radius="30dip"
            app:riv_border_width="2dip"
            app:riv_border_color="#333333"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="true"
             />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/backwithborder4btn"
                android:padding="2dp"
                android:text="@string/register_me"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_margin="20px"/>

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/backwithborder4btn"
                android:padding="2dp"
                android:text="@string/clear_form"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_margin="20px"/>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>