<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fname"
                android:textSize="25sp"
                android:padding="5dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:background="@drawable/backwithborder4edt"
                android:inputType="text"
                android:textSize="25sp"
                android:padding="5dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/famliy"
                android:textSize="25sp"
                android:padding="5dp"
                />
            <TextView
                android:id="@+id/txtFamliy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:background="@drawable/backwithborder4edt"
                android:inputType="text"
                android:textSize="25sp"
                android:padding="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/age"
                android:textSize="25sp"
                android:padding="5dp"
                />
            <TextView
                android:id="@+id/txtAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:background="@drawable/backwithborder4edt"
                android:inputType="number"
                android:textSize="25sp"
                android:padding="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textSize="25sp"
                android:padding="5dp"
                />
            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:background="@drawable/backwithborder4edt"
                android:inputType="textEmailAddress"
                android:textSize="25sp"
                android:padding="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/mobile"
                android:textSize="25sp"
                android:padding="5dp"
                />
            <TextView
                android:id="@+id/txtMobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:background="@drawable/backwithborder4edt"
                android:inputType="phone"
                android:textSize="25sp"
                android:padding="5dp"
                />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:padding="5dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:onClick="Submit"
            android:background="@drawable/backwithborder4btn"
            />

    </RelativeLayout>
</RelativeLayout>